fix(abstract): fix <!-- more -->, now priority is excerpt > abstract > truncate (fix #104)

--- a/src/scss/_partial/_post-page.scss
+++ b/src/scss/_partial/_post-page.scss
@@ -1,3 +1,5 @@
+@import '../_variables.scss';
+
 // ========== main ========== //
 .post-body, .about-body {
     main {
@@ -6,6 +8,7 @@
 }
 
 .anchorjs-archer{
+    color: $feature-color;
     border: none !important;
 }
 
@@ -200,7 +203,7 @@
 }
 
 // ========== content ========== //
-
+.abstract-content,
 .article-entry {
     position: relative;
     padding: 1px 0;
